[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-poster"
version = "0.1.0"
description = "MVP pipeline for an automated AI industry content engine."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.9,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "httpx>=0.28,<1.0",
  "redis>=5.0,<6.0",
  "celery>=5.4,<6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
